5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1621_2930.log
== TEST (2019-04-01 18:08:59) 
-- CODE:
import math from
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= ((a/(2*math.pi) ** 2)
l= 9.81*b
print(l)
-- ERROR:
File "XXXX", line 1
    import math from
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:09:10) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= ((a/(2*math.pi) ** 2)
l= 9.81*b
print(l)
-- ERROR:
File "XXXX", line 4
    l= 9.81*b
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:09:40) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= ((a/(2*math.pi) ** 2)
l= (9.81*b)
print(l)
-- ERROR:
File "XXXX", line 4
    l= (9.81*b)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:09:49) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= ((a/(2*math.pi) ** 2)
l= float(9.81*b)
print(l)
-- ERROR:
File "XXXX", line 4
    l= float(9.81*b)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:13) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= ((a/(2*math.pi) ** 2)
l= (9.81 * b)
print(l)
-- ERROR:
File "XXXX", line 4
    l= (9.81 * b)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:43) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= ((a/(2*math.pi) ** 2)
c= (9.81 * b)
print(c)
-- ERROR:
File "XXXX", line 4
    c= (9.81 * b)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:12:20) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilação do Pendulo? "))
b= (a/(2*math.pi))
g= float(9.81)
c= g*b
print(c)
-- OUTPUT:
31.22619983462987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:12:35) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
g= float(9.81)
c= g*b
print(c)
-- OUTPUT:
31.22619983462987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:13:56) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= ((a/60)/(2*math.pi))
g= float(9.81)
c= g*b
print(c)
-- OUTPUT:
0.5204366639104977
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:37) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
g= float(9.81)
c= (g*b)/60
print(c)
-- OUTPUT:
0.5204366639104978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:15:20) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
g= float(9.81)
c= g*b
print(c)
-- OUTPUT:
31.22619983462987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:15:30) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
g= float(9.81)
c= g*b
print(c)
-- EXECUTION TIME:
0.177803
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
31.22619983462987
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
263.0807336067566
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
506.1766993193501
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:15:47) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))*60
g= float(9.81)
c= g*b
print(c)
-- OUTPUT:
1873.5719900777922
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:24:58) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
c= (b ** 2)
g= float(9.81)
d= g*c
print(d)
-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:25:09) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
c= (b ** 2)
g= float(9.81)
d= g*c
print(d)
-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:25:17) 
-- CODE:
import math
a= float(input("Qual o periodo de oscilacao do Pendulo? "))
b= (a/(2*math.pi))
c= (b ** 2)
g= float(9.81)
d= g*c
print(d)
-- EXECUTION TIME:
0.13515
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
